# 2d-simulation

./: .gitignore  README.md  main.py  pyproject.toml
src/simulation/: __init__.py  logger.py  simulation.py
src/simulation/backend/: __init__.py  backend.py  backend_config.py  map.py  spawner.py
src/simulation/backend/behavior_algoritms/: __init__.py  breeding_algoritms.py  escaping_algoritms.py  searching_algoritms.py
src/simulation/backend/entities/: __init__.py  creature.py  creatures.py  entity.py  grass.py  ground.py  herbivore.py  objects.py  predator.py  rock.py
src/simulation/backend/search_algoritms/: BFS.py  __init__.py
src/simulation/frontend/: __init__.py  console_frontend.py  gui_config.py  gui_frontend.py  interface.py
tests/backend/: test_backend.py
tests/test_backend/: test_spawner.py
tests/test_frontend/: test_gui_frontend.py
tests/test_spawner/: test_spawner.py
