[tool.poetry]
name = "2d-simulation"
version = "0.1.0"
description = ""
authors = ["alex <melnikov1991@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
ruff = "^0.9.6"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
